--- a/style.css
+++ b/style.css
@@ -13,6 +13,12 @@ header.home {
   color: #4e0d0d;
 }
 
+img {
+  border-radius: 10px;
+  margin-top: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 body {
   font-family: Arial, sans-serif;
   background-color: #fffaf5;
