--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@ header.home {
   color: #4e0d0d;
 }
 
-img {
+.center-img {
+  display: block;
+  margin: 20px auto;
+  max-width: 100%;
+  height: auto;
   border-radius: 10px;
-  margin-top: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 body {
