--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body.guide {
 }
 
 header.guide {
-  background-color: #4e0d0d;
+  background-color: yellow;
   color: #ffffff;
 }
 
@@ -66,11 +66,11 @@ header {
 }
 
 body.inspiration {
-  background-color: #ffffff;
+  background-color: #e0c58f;
   color: #4e0d0d;
 }
 header.inspiration {
-  background-color: #4e0d0d;
+  background-color: yellow;
   color: #ffffff;
 }
 
