--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body.guide {
 }
 
 header.guide {
-  background-color: yellow;
+  background-color: #4e0d0d;
   color: #ffffff;
 }
 
@@ -70,7 +70,7 @@ body.inspiration {
   color: #4e0d0d;
 }
 header.inspiration {
-  background-color: yellow;
+  background-color: #4e0d0d;
   color: #ffffff;
 }
 
